@@ -31,7 +31,7 @@ xclock_SOURCES =	\
         ClockP.h \
         xclock.c
 
-appman_SOURCES = \
+appman_PRE = \
         xclock.man
 
 # App default files  (*.ad)
@@ -59,9 +59,9 @@ CLEANFILES = $(APPDEFAULTFILES)
 
 appmandir = $(APP_MAN_DIR)
 
-appman_DATA = $(appman_SOURCES:man=@APP_MAN_SUFFIX@)
+appman_DATA = $(appman_PRE:man=@APP_MAN_SUFFIX@)
 
-EXTRA_DIST += $(appman_SOURCES)
+EXTRA_DIST += $(appman_PRE)
 CLEANFILES += $(appman_DATA)
 
 SED = sed
